--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ beautifulsoup4>=4.13.0
 pypdf>=5.0.0
 python-docx>=1.1.0
 python-multipart>=0.0.12
+pillow>=11.0.0
+pytesseract>=0.3.13
 pytest>=8.3.0
